# deep_learning

./: NLP.py  NLP_new.py  NLP_self.py  logodetection.py  logodetector.py  time series.py  transfer_learning_augmentation.py  urbanSoundClassification_mfc.py  urbanSoundClassification_model.py
Object_Detection_API/: README.md
Object_Detection_API/Detection-Service/: setup.py
Object_Detection_API/Detection-Service/swagger_server/: __main__.py
Object_Detection_API/Detection-Service/swagger_server/controllers/: default_controller.py
Object_Detection_API/Detection-Service/swagger_server/models/: __init__.py  different_modes.py  image.py  inline_response200.py  inline_response200_classification.py  thres.py  (+2 more)
POSTagger/keras/: test_pos.py
POSTagger/pytorch/: POS_BiLSTM.py
app_logo_classification/: logodetector.py
logo-detector/: README.rst  app.py  bbox.py  pyproject.toml  train.py
logo-detector/logo_detector/: detector.py  logodetector.py  pixray@gpu.pixray.com  views.py
logo-detector/logo_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
logo-detector/tests/: test_logo_detector.py
yolo-object-detection-yolov3+loss/: darknet.py  darknet1.py  detector.py  json_parse.py  list_sizes.txt  list_sizes_logo.txt  pixray@gpu.pixray.com  preprocess.py  util.py  yolov3loss.py
yolo-object-detection-yolov3+loss/cfg/: yolov3_80.cfg
yolo-object-detection-yolov3+loss/data/: logo.names
yolo-object-detection-yolov3+loss/gpu/: darknet.py  new_test.py  train_yolov3.py  util.py
yolo-object-detection-yolov3+loss/object_detection_new/yolov3/: train.py
(+7 files in other folders)
